--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+html {
+  background-image: linear-gradient(#c13100 0 20%, white 20% 80%, #c13100 80%) 100%;
+  /* background-color: #c13100; */
+  background-size: contain;
+  background-image: url("./img/bg.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: top;
+}
 html,
 body {
   margin: 0;
@@ -13,16 +22,19 @@ body {
   width: 1280px;
   /* height: 800px; */
   /*position: fixed;*/
-  margin: 50px auto;
-  background-image: linear-gradient(#c13100, #fe9800);
-  /* background-image: url("./bg.png"); */
-  background-size: cover;
+  margin: 0 auto;
+  padding: 50px auto;
+  /* background-image: linear-gradient(#c13100, #cc6600 50%, #fe9800 95%);
+  background-image: url("./img/banner.png"); */
+  /* background-size: cover;
+  background-image: url("./img/bg.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center;
+  background-position: top; */
 }
 
 h2 {
+  height: 150px;
   text-align: center;
   color: yellow;
   -webkit-text-stroke-width: 3px;
@@ -37,20 +49,22 @@ h2 {
   padding: 0;
   border: 0;
   text-align: center;
+  /* background-color: white; */
 }
 
 .name {
   height: 50px;
   line-height: 50px;
   background-color: #33e;
-  background-image: linear-gradient(#3d1f00, #33e 20%, #66f 80%);
+  background-image: linear-gradient(#3d1f00, #33e 20%, #99f 80%);
   padding: 0;
   border: 1px solid #119;
   border-radius: 25px;
-  margin: 25px 0;
+  margin: 80px 100px 5px 100px;
 }
 
 input {
+  font-weight: 600;
   color: white;
   font-size: 40px;
   width: 90%;
@@ -59,10 +73,14 @@ input {
   border: 0 solid white;
 }
 
+#choco input {
+  color: #3d1f00;
+}
+
 #choco .name {
-  background-color: #e33;
-  background-image: linear-gradient(#3d1f00, #e33 20%, #f66 80%);
-  border: 1px solid #911;
+  background-color: #ee3;
+  background-image: linear-gradient(#3d1f00, #ee3 20%, #ff6 80%);
+  border: 1px solid #991;
 }
 
 .main {
@@ -80,12 +98,12 @@ input {
   background-position: center;
   background-image: linear-gradient(#fffbd0, #fffbd0);
   cursor: pointer;
-  border-radius: 48%;
+  border-radius: 20px;
   border: #3d1f00 solid 1px;
 }
 
 /* #choco .img {
-  background-image: linear-gradient(#e33, #f66);
+  background-image: linear-gradient(#ee3, #ff6);
 } */
 
 .img img {
@@ -97,13 +115,14 @@ input {
 #berry .img {
   color: #33e;
   width: 100%;
+  background-image: linear-gradient(#99f, #99f);
   /* height: 490px; */
   /* background-image: url("img/berry.gif");
   transform: scaleX(-1); */
 }
 
 #choco .img {
-  color: #e33;
+  color: #ee3;
   /* background-image: url("img/choco.png"); */
 }
 
@@ -351,7 +370,7 @@ input {
     transform: scale(1500%, 1500%);
   }
   100% {
-    transform: scale(100%, 100%);
+    transform: scale(101%, 101%);
   }
 }
 
@@ -362,4 +381,86 @@ input {
   width: 17.5%;
   transform-origin: center;
   animation-name: dead;
+}
+
+@keyframes win1 {
+  0% {
+    /* transform: scale(100%, 100%);
+    border-radius: 48%; */
+  }
+  100% {
+    transform: scale(150%, 150%) translateX(19%);
+  }
+}
+
+.finished {
+  display: block;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+#berry .finished {
+  transform-origin: bottom left;
+  animation-name: win1;
+}
+
+.lose {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 1s, opacity 1s linear;
+}
+
+@keyframes win2 {
+  0% {
+    /* transform: scale(100%, 100%);
+    border-radius: 48%; */
+  }
+  100% {
+    transform: scale(150%, 150%) translateX(-16%);
+  }
+}
+
+#choco .finished {
+  transform-origin: bottom right;
+  animation-name: win2;
+}
+
+/* div.name.finished {
+  position: relative;
+  z-index: 10;
+} */
+
+.winner.hidden {
+  display: none;
+}
+
+.winner.show {
+  width: 100%;
+  text-align: center;
+  display: block;
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 2s linear;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: 1s;
+  transform-origin: center;
+  animation-name: winning;
+  font-size: 5.5rem;
+  text-shadow: #3d1f00 5px 5px 5px;
+  color: #c13100;
+}
+
+@keyframes winning {
+  0% {
+    /* transform: scale(100%, 100%);
+    border-radius: 48%; */
+  }
+  100% {
+    transform: translateY(-600px);
+  }
 }
